# scientific-skills-for-cs

./: .gitignore  README.md  pyproject.toml
docs/: examples.md  skills.md
skills/aeon(时间序列机器学习)/: SKILL.md
skills/arbor(假设树自主优化)/: SKILL.md
skills/autoskill(工作流技能自动起草)/: SKILL.md
skills/bgpt-paper-search(BGPT论文检索)/: SKILL.md
skills/cirq(Google量子计算)/: SKILL.md
skills/citation-management(引用管理)/: SKILL.md
skills/consciousness-council(多视角审议)/: SKILL.md
skills/dask(分布式计算)/: SKILL.md
skills/dhdna-profiler(认知模式分析)/: SKILL.md
skills/docx(Word文档处理)/: SKILL.md
skills/exa-search(Exa网页学术搜索)/: SKILL.md
skills/experimental-design(实验设计)/: SKILL.md
skills/generate-image(AI图像生成)/: SKILL.md
skills/geopandas(地理空间向量分析)/: SKILL.md
skills/get-available-resources(计算资源探测)/: SKILL.md
skills/hypogenic(LLM假设生成与检验)/: SKILL.md
skills/hypothesis-generation(假设生成)/: SKILL.md
skills/infographics(信息图制作)/: SKILL.md
skills/latex-posters(LaTeX科研海报)/: SKILL.md
skills/liteparse(本地文档解析)/: SKILL.md
skills/literature-review(文献综述)/: SKILL.md
skills/markdown-mermaid-writing(Markdown与Mermaid绘图)/: SKILL.md
skills/markitdown(文档转Markdown)/: SKILL.md
skills/matlab(MATLAB数值计算)/: SKILL.md
skills/matplotlib(Matplotlib绑图)/: SKILL.md
skills/modal(Modal云端GPU)/: SKILL.md
skills/networkx(复杂网络分析)/: SKILL.md
skills/nextflow(可复现数据工作流)/: SKILL.md
skills/open-notebook(开源研究笔记本)/: SKILL.md
skills/optimize-for-gpu(GPU加速计算)/: SKILL.md
skills/paper-lookup(学术论文检索)/: SKILL.md
skills/paperzilla(Paperzilla论文助手)/: SKILL.md
skills/parallel-web(Parallel网页学术检索)/: SKILL.md
(+41 files in other folders)
